--- a/public/css/breeder.css
+++ b/public/css/breeder.css
@@ -355,3 +355,133 @@ hr.solidSect4_2 {
     margin: 0;
     color: #7a5454;
 }
+
+.section5{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    position: relative;
+    z-index: 2;
+    background-color: #efefef;
+}
+.leftSect5{
+    height: 650px;
+}
+#imgSec5{
+    margin-top: -275px;
+}
+.txtSect5{
+    margin-top: 150px;
+    margin-left: 20px;
+    margin-right: 50px;
+}
+#record{
+    font-weight: bold;
+    font-size: 35px;
+    margin: 0;
+}
+.growthText{
+    display: flex;
+    font-size: 35px;
+    font-weight: bold;
+}
+#growth{
+    margin: 0;
+}
+#furry{
+    margin: 0;
+    margin-left: 10px;
+    color: #785151;
+}
+hr.solidSect5 {
+    border-top: 1px solid #bbb;
+    margin-right: 70%;
+    margin-top: 20px;
+}
+.descSect5{
+    margin-top: 20px;
+    margin-right: 150px;
+    font-weight: 300;
+    color: grey;
+}
+#freeApp{
+    color: #785151;
+    font-weight: 400;
+    margin-top: 30px;
+}
+#appStore{
+    width: 125px;
+}
+#playStore{
+    width: 125px;
+}
+
+footer{
+    background-color: #262525;
+    width: 100%;
+    height: 430px;
+}
+.container{
+    display: grid;
+    grid-template-columns: 60% 20% 20%;
+}
+.leftFooter{
+    margin-top: 70px;
+    margin-left: 80px;
+}
+#logoFooter{
+    width: 80px;
+}
+#txtLogoFooter{
+    margin-top: 15px;
+    width: 225px;
+}
+.descFooter{
+    margin-top: 25px;
+    margin-right: 60%;
+    color: white;
+    font-weight: 200;
+    font-size: small;
+}
+.iconFooter{
+    margin-top: 25px;
+    margin-left: -10px;
+}
+.iconFooter img{
+    margin-left: 10px;
+}
+.middleFooter{
+    margin-top: 70px;
+}
+.linksnOther{
+    color: white;
+    list-style: none;
+    margin-top: 50px;
+}
+.linksnOther b{
+    font-size: 20px;
+}
+.deriv{
+    margin-top: 15px;
+    font-weight: 100;
+    font-size: 15px;
+    color: lightgray;
+}
+.deriv li{
+    margin-top: 7px;
+}
+.rightFooter{
+    margin-top: 70px;
+}
+.solidFooter{
+    border-top: 0.1px solid;
+    margin-top: 30px;
+    width: 90%;
+    height: 100;
+}
+.bottom-bar{
+    margin-top: 40px;
+    color: white;
+    font-weight: 100;
+    text-align: center;
+    font-size: 15px;
+}
